# turtles_journey

./: CMakeLists.txt  README.md
res/: reef.tmj  swim_turtle.ase  tileset.tsj  turtle.tiled-session  walking_turtle.ase
src/: TurtleGame.cpp  TurtleGame.h  fwd.h  main.cpp
src/components/: BeachTurtleC.h  CarC.h  EggC.h  GameStatsC.h  ItemC.h  StreetC.h  SwimTurtleC.h  TextureC.h  WalkTurtle.h
src/data/: GameData.cpp  GameData.h
src/loader/: EntityLoader.cpp  LoadTasks.h  ParticleLoader.cpp  SettingsLoader.cpp  TextureLoader.cpp  UILoader.cpp
src/scripts/: BadItemScript.cpp  CarScript.cpp  EggScript.cpp  GoodItemScript.cpp  PartnerTurtleScript.cpp  Scripts.h  StreetScript.cpp  SwimTurtleScript.cpp  WalkTurtleScript.cpp
src/stages/: Stage.h  Stage1Beach.cpp  Stage2Street.cpp  Stage3Ocean.cpp  StageTransition.cpp  StageTransition.h
src/systems/: AnimSystem.cpp  BeachTurtleSystem.cpp  OverlaySystem.cpp  SystemHandler.h  TextureSystem.cpp
src/ui/: BeachUI.cpp  BeachUI.h  HighScoreUi.cpp  HighScoreUi.h  MainMenu.cpp  MainMenu.h  OceanUi.cpp  OceanUi.h  PixelButton.cpp  PixelButton.h  StreetUi.cpp  StreetUi.h
